src/objects/Tracked_Email_Event__c.object
<CustomObject>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Tracked Email</label>
        <referenceTo>Tracked_Email__c</referenceTo>
        <relationshipLabel>Tracked Email Events</relationshipLabel>
        <relationshipName>Tracked_Email_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>audit_trail_ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>signed_document_ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Tracked Email Event</label>
    <nameField>
        <displayFormat>TEE-{00000000}</displayFormat>
        <label>Tracked Email Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Email Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>